text block alignment issue fixed

--- a/assets/common.css
+++ b/assets/common.css
@@ -78,10 +78,21 @@ img {
 	object-fit: fill
 }
 
+/* CONTAINER STYLING */
+
 .image-block {
-	/* padding: 2rem; */
 	display: flex;
 	flex-direction: row;
+}
+
+.text-block {
+	display: flex;
+	justify-content: space-around;
+}
+
+.parent-container div {
+	align-items: center;
+	margin: auto;
 }
 
 /* MODAL STYLING */
@@ -205,7 +216,7 @@ h3 {
 	position: relative;
 }
 
-.container-title{
+.container-title {
 	width: 100%;
 	height: 100%;
 	display: flex;
